css/now.css
html, body, header, form, input {
	padding: 0;
	margin: 0;
	border: 0;
	outline: 0;
}

body {
	background: #e5e5e5;
	font-family: Roboto, sans-serif;
	overflow-y: scroll;
}

header {
	height: 180px;
	background: no-repeat center bottom;
	background-size: cover;
	position: relative;
	
	text-align: center;
}

html.dawn header {
	background-image: url(../banner/dawn.jpg);
}
html.day header {
	background-image: url(../banner/day.jpg);
}
html.dusk header {
	background-image: url(../banner/dusk.jpg);
}
html.night header {
	background-image: url(../banner/night.jpg);
}

header form {
	position: absolute;
	bottom: 20px;
	width: 100%;
}
header input {
	font-size: 16px;
	font-family: inherit;
}

header input, .card {
	border: 0;
	border-radius: 3px;
	padding: 10px;
	box-shadow: 0 1px 3px rgba(0,0,0,0.3);
	background: #fff;
	width: 40%;
	box-sizing: border-box;
}

.columns {
	width: 70%;
	margin: auto;
}

.leftColumn, .rightColumn {
	width: 50%;
	box-sizing: border-box;
	float: left;
	min-height: 10px;
}
.leftColumn {padding-right: 10px;}
.rightColumn {padding-left: 10px;}

.card {
	margin: 20px auto 0;
	display: none;
	-webkit-transform: translate3d(0,800px,0);
	transform: translate3d(0,800px,0);
	width: 100%;
}

.card h2, .card h3, .card p {
	font-weight: 300;
	margin: 0;
}

.card.clock {
	text-align: center;
	line-height: 1;
}
.card.clock h2 {
	font-size: 5em;
}
.card.clock h3 {
	line-height: 1.5em;
}
.card.clock .hours {
	font-weight: 500;
}
.card.clock .seconds {
	font-weight: 100;
}
.card.clock .ampm {
	font-weight: 100;
	vertical-align: super;
	font-size: 0.5em;
}
.card.clock .firstcolon, .card.clock .secondcolon {
	color: transparent;
}
.card.clock .datesuffix {
	vertical-align: super;
	font-size: 0.5em;
	font-weight: 400;
}

.card.weather .current_temperature {
	font-size: 3em;
	line-height: 1;
}
.card.weather .current_conditions {
	padding-left: 3px;
}
.card.weather .current_icon, .card.weather .current_text {
	display: inline-block;
	vertical-align: middle;
}
.card.weather .forecast {
	list-style: none;
	padding: 0;
	margin: 0;
}
.card.weather .forecast li {
	width: 25%;
	float: left;
	box-sizing: border-box;
	padding: 5px;
	text-align: center;
}
.card.weather .forecast .day, .card.weather .forecast .temp {
	display: block;
}
.card.weather .forecast .low {
	color: #888;
}

.card.suggestions {
	-webkit-transform: none;
	transform: none;
	width: 40%;
	position: absolute;
	z-index: 1;
	margin-left: 30%;
	margin-top: -10px;
	box-shadow: 0 1px 20px rgba(0, 0, 0, 0.3);
}

.card.suggestions ul {
	margin: 0;
	padding: 0;
	list-style: none;
}

.card.suggestions li {
	cursor: pointer;
}

.card.suggestions li:hover {
	text-decoration: underline;
}

.card.topsites span {
	display: block;
	text-align: center;
	white-space: nowrap;
	text-overflow: ellipsis;
	overflow: hidden;
	line-height: 30px;
}
.card.topsites .sitename {
	width: 100%;
}
.card.topsites .thumbbox {
}
.card.topsites .favicon {
	vertical-align: middle;
}
.card.topsites a {
	display: inline-block;
	width: 25%;
	box-sizing: border-box;
	vertical-align: top;
	font-size: 12px;
	position: relative;
	color: inherit;
	text-decoration: none;
}

.card.topsites a:hover span {
	text-decoration: underline;
}

.card.googleservices a {
	display: inline-block;
	width: 8.333%;
	text-align: center;
}

.card.apps {
	text-align: center;
}
.card.apps .icon {
	width: 64px;
}
.card.apps .app {
	display: inline-block;
	width: 25%;
	font-size: 12px;
	cursor: pointer;
}
.card.apps .appname {
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	width: 100%;
	display: block;
}
.card.apps .app:hover {
	text-decoration: underline;
}

